fix(design): tweak scrollbar colors (#687)

--- a/scss/themes/_base.scss
+++ b/scss/themes/_base.scss
@@ -93,10 +93,3 @@
 
   --compose-button-halo: #{rgba(255, 255, 255, 0.1)};
 }
-
-$scrollbar-face: #{lighten($main-theme-color, 18%)} !default;
-$scrollbar-face-hover: #{lighten($main-theme-color, 20%)} !default;
-$scrollbar-face-active: #{lighten($main-theme-color, 15%)} !default;
-$scrollbar-track: #{darken($body-bg-color, 3%)} !default;
-
-@import "_scrollbars.scss";
